[version "0.1.36"]
date = Sat Oct 29 09:21:42 PM PDT 2022
done = Add sub-library bashplus/git.bash

[version "0.1.35"]
date = Sat Oct 29 03:48:09 PM PDT 2022
done = Renumber tests

[version "0.1.34"]
date = Sat Oct 29 03:47:29 PM PDT 2022
done = Fix some bugs in +timer-wrap

[version "0.1.33"]
date = Sat Oct 29 01:35:47 PM PDT 2022
done = Improve +timer* functions

[version "0.1.32"]
date = Sat Oct 29 12:02:46 PM PDT 2022
done = Add timer functions
done = Add +source and +wrap functions

[version "0.1.31"]
date = Mon Oct 17 09:11:17 PM PDT 2022
done = Reformat bashplus:version function

[version "0.1.30"]
date = Sat Oct 15 05:59:01 PM PDT 2022
done = Fix whether to print line # for die message

[version "0.1.29"]
date = Thu Oct 13 09:16:41 AM PDT 2022
done = Newline one last die msg line disables line #

[version "0.1.28"]
date = Wed Oct  5 07:58:51 PM PDT 2022
done = Fix .bpan/config symlink

[version "0.1.27"]
date = Wed Oct  5 09:39:31 AM PDT 2022
done = Fix +mtime on macos

[version "0.1.26"]
date = Sun Oct  2 06:16:04 PM PDT 2022


[version "0.1.25"]
date = Sun Oct  2 06:14:47 PM PDT 2022
done = Add +mtime and +time

[version "0.1.24"]
date = Sat Oct  1 02:04:37 PM PDT 2022
done = Add +dirname and +dirpath
done = Version 0.1.23

[version "0.1.23"]
date = Fri Sep 30 12:56:05 PM PDT 2022
done = Change 'update.template' to 'update.file' in config

[version "0.1.22"]
date = Fri Sep 30 09:22:40 AM PDT 2022
done = Don't use 'warn' internally

[version "0.1.21"]
date = Fri Sep 30 08:26:51 AM PDT 2022
done = Add +is-empty function for files and dirs
done = Change 'function x ...' to 'x() ...'
done = Change '+warn' back to 'warn'

[version "0.1.20"]
date = Mon Sep 26 07:55:18 AM EDT 2022
done = Fix bug in test

[version "0.1.19"]
date = Mon Sep 26 07:53:05 AM EDT 2022
done = Add more possible +sym implementations
done = Remove .bpan/lib/bpan.bash

[version "0.1.18"]
date = Sun Sep 25 12:34:56 PM EDT 2022
done = BPAN update

[version "0.1.17"]