@@ -3,7 +3,7 @@ api-version = 1
 
 [package]
 name = bashplus
-version = 0.1.36
+version = 0.1.37
 title = A Collection of Useful Bash Functions
 license = MIT
 copyright = 2022
