@@ -3,9 +3,8 @@
 # DO NOT EDIT. GENERATED BY BPAN.
 
 source test/init
-source lib/bashplus.bash --cmd
 
-+cmd:is-ver shellcheck 0.8.0 ||
++is-cmd-ver shellcheck 0.8.0 ||
   plan skip-all "Test requires shellcheck 0.8.0+ to be installed"
 
 skip=1064,1072,1073,1090,1091,2002,2030,2031,2034,2154,2207,2217
